--- a/catalogo.css
+++ b/catalogo.css
@@ -59,6 +59,20 @@ section{
     flex-direction: column;
     align-items: center;
 }
+.btn-adicionar {
+    background-color: rgb(1, 1, 94);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: auto;  
+    width: 100%;
+}
+.btn-adicionar:hover {
+    background-color: #0056b3;
+}
 footer{
     margin-top: 50px;
     padding: 40px 20px;
