--- a/catalogo.css
+++ b/catalogo.css
@@ -8,9 +8,16 @@ body{
     font-family: sans-serif; 
     color: rgb(1, 1, 94);
 }
+.logo{
+    width: 150px;
+    margin-top: -45px;
+}
 header{
     height: 20%;
     padding: 20px 0;
+    margin-top: 35px;
+    display: flex;
+    justify-content: space-between;
 }
 h1{
     text-align: center;
@@ -29,6 +36,9 @@ ul{
 a{
     text-decoration: none;
     color: inherit;
+}
+.item_menu{
+    margin-left: 10px;
 }
 .item_menu:hover{
     background-color: rgb(1, 1, 94);
@@ -72,6 +82,17 @@ section{
 }
 .btn-adicionar:hover {
     background-color: #0056b3;
+}
+.btn-usuario{
+    background-color: rgb(1, 1, 94);
+    color: white;
+    padding: 15px;
+    border: 1px solid rgb(1, 1, 94);
+    border-radius: 5px;
+    font-weight: bold;
+}
+.btn-usuario:hover{
+    opacity: 0.9;
 }
 footer{
     margin-top: 50px;
@@ -129,4 +150,15 @@ footer{
 }
 .produtos p{
     color: rgb(1, 1, 94);
+}
+input, textarea{
+    padding: 10px;
+    border: 1px solid rgb(1, 1, 94);
+    border-radius: 5px;
+    margin-top: 5px;
+}
+textarea{
+    width: 100%;
+    height: 150px;
+    resize: none;
 }
