--- a/estilo.css
+++ b/estilo.css
@@ -11,9 +11,16 @@ body{
     font-family: sans-serif;
     color: rgb(1, 1, 94);
 }
+.logo{
+    width: 150px;
+    margin-top: -45px;
+}
 header{
     height: 20%;
     padding: 20px 0;
+    margin-top: 35px;
+    display: flex;
+    justify-content: space-between;
 }
 h1{
     text-align: center;
@@ -202,7 +209,28 @@ section {
 .btn-adicionar:hover {
     background-color: #0056b3;
 }
-
+.btn-usuario{
+    background-color: rgb(1, 1, 94);
+    color: white;
+    padding: 15px;
+    border: 1px solid rgb(1, 1, 94);
+    border-radius: 5px;
+    font-weight: bold;
+}
+.btn-usuario:hover{
+    opacity: 0.9;
+}
+input, textarea{
+    padding: 10px;
+    border: 1px solid rgb(1, 1, 94);
+    border-radius: 5px;
+    margin-top: 5px;
+}
+textarea{
+    width: 100%;
+    height: 150px;
+    resize: none;
+}
 @media (max-width: 768px) {
     header h1 {
         font-size: 1.5rem;
@@ -228,3 +256,4 @@ section {
         text-align: center;
         align-items: center;
     }
+}
