Add styles for logo and menu items in sobre.css

--- a/sobre.css
+++ b/sobre.css
@@ -8,9 +8,16 @@ body{
     font-family: sans-serif; 
     color: rgb(1, 1, 94);
 }
+.logo{
+    width: 150px;
+    margin-top: -45px;
+}
 header{
     height: 20%;
     padding: 20px 0;
+    margin-top: 35px;
+    display: flex;
+    justify-content: space-between;
 }
 h1{
     text-align: center;
@@ -29,6 +36,13 @@ ul{
 a{
     text-decoration: none;
     color: inherit;
+}
+li{
+    margin-top: 10px;
+    list-style-type: none;
+}
+.item_menu{
+    margin-left: 10px;
 }
 .item_menu:hover{
     background-color: rgb(1, 1, 94);
