--- a/sobre.css
+++ b/sobre.css
@@ -105,14 +105,21 @@ footer{
 }
 
 .imagem_natacao{
-    flex-basis: 30%;
-    border: 1px solid rgb(1, 1, 94);
-
+    width: 100%;
+    margin-top: 60px;
+    overflow: hidden; 
+    mask-image: linear-gradient(to top, black 70%, transparent);
+    -webkit-mask-image: linear-gradient(to top, black 70%, transparent);
 }
 .piscina{
     width: 100%;
+    height: 300px;         
+    object-fit: cover;
+    display: block;
+    opacity: 0.85;
 }
-@media (max-width: 768px){
+
+
     .caixa_sobre{
         flex-direction: column;
         text-align: center;
