--- a/contato.css
+++ b/contato.css
@@ -47,7 +47,8 @@ body{
 }
 
 .barra_pesquisa input {
-    width: 170px;
+    width:100%
+    max-width: 170px;
     padding: 6px 10px;
     border-radius: 20px;
 }
@@ -92,11 +93,12 @@ body{
 }
 
 @media (max-width: 768px) {
-    .header {
-        grid-template-columns: 1fr;
-        gap: 15px;
-        text-align: center;
+    .header-esquerda,
+    .header-centro,
+    .header-direita {
+        justify-content: center;
     }
+}
 
     .header-direita {
         justify-content: center;
@@ -156,7 +158,8 @@ footer{
 .container{
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     padding: 30px;
     border: 1px solid rgb(1, 1, 94);
     border-radius: 15px;
