--- a/estilo.css
+++ b/estilo.css
@@ -50,7 +50,8 @@ body{
 }
 
 .barra_pesquisa input {
-    width: 170px;
+    max-width: 170px;
+    width: 100%;
     padding: 6px 10px;
     border-radius: 20px;
 }
@@ -100,6 +101,13 @@ body{
         gap: 15px;
         text-align: center;
     }
+
+    .header-esquerda,
+    .header-direita {
+        justify-content: center;
+    }
+}
+
 
     .header-direita {
         justify-content: center;
@@ -195,7 +203,7 @@ footer{
     color: rgb(1, 1, 94);
 }
 .hero{
-    height: 500px;
+    min-height: 500px;
     background-image: linear-gradient(white, rgb(1, 1, 94, 0.3)), url(imagem/imagem_hero.webp);
     background-size: cover;
     background-position: center;
