--- a/catalogo.css
+++ b/catalogo.css
@@ -48,10 +48,10 @@ body{
 }
 
 .barra_pesquisa input {
-    width: 170px;
-    padding: 6px 10px;
-    border-radius: 20px;
+    max-width: 170px;
+    width: 100%;
 }
+
 
 .acoes-usuario {
     display: flex;
@@ -103,6 +103,10 @@ body{
         justify-content: center;
         flex-wrap: wrap;
     }
+   
+    .header-esquerda {
+        justify-content: center;
+    }
 
     .menu ul {
         flex-direction: column;
@@ -124,7 +128,7 @@ section{
 .produtos{
     flex-basis: 300px;
     background-color: white;
-    height: 400px;
+    min-height: 400px;
     border: 3px solid rgb(1, 1, 94);
     border-radius: 8px;
     padding: 15px;
