--- a/contato.css
+++ b/contato.css
@@ -1,3 +1,4 @@
+/* formatação geral */
 *{
     box-sizing: border-box;
     margin: 0;
@@ -8,6 +9,7 @@ body{
     font-family: sans-serif; 
     color: rgb(1, 1, 94);
 }
+/* cabeçalho */
 .header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -91,7 +93,7 @@ body{
     padding: 5px 15px;
     border-radius: 20px;
 }
-
+/* responsividade */
 @media (max-width: 768px) {
     .header-esquerda,
     .header-centro,
