--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,4 @@
+/* formatação geral */
 *{
     box-sizing: border-box;
     margin: 0;
@@ -11,6 +12,7 @@ body{
     font-family: sans-serif;
     color: rgb(1, 1, 94);
 }
+/* cabeçalho */
 .header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -95,7 +97,7 @@ body{
     padding: 5px 15px;
     border-radius: 20px;
 }
-
+/* responsividade */
 @media (max-width: 768px) {
     .header {
         grid-template-columns: 1fr;
@@ -119,7 +121,6 @@ body{
         flex-direction: column;
         gap: 10px;
     }
-}
 
 a{
     text-decoration: none;
